<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pet Care Manager</string>
    <string name="hint_pet_name">Pet Name</string>
    <string name="hint_pet_type">Pet Type (e.g. Dog, Cat)</string>
    <string name="button_add_pet">Save Pet</string>
    <string name="button_select_birthday">Select Birthday</string>
    <string name="label_no_date">No date selected</string>
    <string name="label_selected_date_prefix">Selected Date: %1$s</string>
    <string name="menu_addPetRecord">New Record</string>
    <string name="menu_cancelPetCare">Cancel</string>
    <string name="no_date_selected">No date selected</string>
    <string name="notes">Notes:</string>
    <string name="enter_notes_about_this_pet">Enter notes about this pet</string>
    <string name="feeding_time">Feeding Time:</string>
    <string name="save_details">Save Details</string>
    <string name="hint_pet_notes">Notes…</string>
    <string name="menu_deletePet">Delete</string>
    <string name="seperator">:</string>
    <string name="menu_backPetCare">Back</string>


</resources>
